API: Created 'AnyAppointment' Admin Endpoint
